<resources>
    <string name="app_name">TranslaSign</string>
    <string name="login">Login</string>
    <string name="enter_your_account_details_below">Enter your account details below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_yet_sign_up">Don\'t have an account yet? <b><u>Sign up!</u></b></string>
    <string name="sign_in">Sign In</string>
    <string name="search_hint">Search for letters…</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="guest">Guest</string>
    <string name="already_have_an_account_sign_in">Already have an account? <b><u>Sign in!</u></b></string>
    <string name="register">Register</string>
    <string name="enter_your_details_to_sign_up_below">Enter your details to sign-up below</string>
    <string name="name">Name</string>
    <string name="register_success">Account with the username %1$s has been created. Let\'s sign you in!</string>
    <string name="register_fail">Please re-check your credentials. \n\nError: %1$s</string>
    <string name="login_fail">Please try again. \n\nError: %1$s</string>
    <string name="login_success">Welcome, %1$s. Let\'s start learning sign language!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="pause">Pause</string>
    <string name="clear">Clear</string>
    <string name="start">Start</string>
    <string name="result" />
    <string name="tflitevision_is_not_initialized_yet">TfLiteVision is not initialized yet</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="inference_time">Inference Time</string>
    <string name="video_translation">Video Translation</string>
    <string name="add_video">Add Video</string>
    <string name="translate">Translate</string>
    <string name="video_result">Result</string>
    <string name="translation_result">The translation will show up here…</string>
    <string name="inference_result">%d ms</string>
    <string name="logout_successful">You have been logged out.</string>
    <string name="video_to_text_translation">Video-To-Text Translation</string>
    <string name="real_time_translation">Real-Time Translation</string>
    <string name="translasign">TranslaSign</string>
    <string name="dictionary">Dictionary</string>
    <string name="translator">Translator</string>
    <string name="words">Words</string>
    <string name="description">Description</string>
    <string name="word">Word</string>
    <string name="password_error">Password needs to be atleast 8 characters long.</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="switch_camera">Switch Camera</string>
</resources>