<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".camera.CameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="92dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/switchCamera"
        android:contentDescription="@string/switch_camera"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/viewFinder"
        app:layout_constraintTop_toTopOf="@+id/viewFinder"
        app:srcCompat="@drawable/ic_switch_camera"
        app:tint="@color/white" />

    <Button
        android:id="@+id/btn_toggle"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/base_black"
        android:drawableLeft="@drawable/play_arrow_24px"
        android:drawableTint="@color/white"
        android:paddingStart="10dp"
        android:paddingEnd="16dp"
        android:text="@string/start"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/base_black"
        android:drawableLeft="@drawable/baseline_clear_24"
        android:drawableTint="@color/white"
        android:paddingStart="10dp"
        android:paddingEnd="16dp"
        android:text="@string/clear"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/viewFinder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="RESULT" />

    <TextView
        android:id="@+id/tvInferenceTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inference_time"
        app:layout_constraintBottom_toTopOf="@+id/viewFinder"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_letter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="Letter"
        app:layout_constraintEnd_toEndOf="@+id/viewFinder"
        app:layout_constraintStart_toStartOf="@+id/viewFinder"
        app:layout_constraintTop_toBottomOf="@+id/viewFinder" />

</androidx.constraintlayout.widget.ConstraintLayout>