<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".videotranslator.VideoActivity">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/video_top" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/video_translation"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.media3.ui.PlayerView
        android:id="@+id/player_view"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/base_black"
        android:drawableLeft="@drawable/baseline_add_24"
        android:drawableTint="@color/white"
        android:paddingStart="10dp"
        android:paddingEnd="16dp"
        android:text="@string/add_video"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="@+id/player_view"
        app:layout_constraintTop_toBottomOf="@+id/player_view" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/base_black"
        android:drawableLeft="@drawable/baseline_clear_24"
        android:drawableTint="@color/white"
        android:paddingStart="10dp"
        android:paddingEnd="16dp"
        android:text="@string/clear"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/player_view"
        app:layout_constraintTop_toBottomOf="@+id/player_view" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/video_result"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toTopOf="@id/btn_translate"
        app:layout_constraintEnd_toEndOf="@id/btn_clear"
        app:layout_constraintStart_toStartOf="@id/btn_add"
        app:layout_constraintTop_toBottomOf="@id/btn_add" />

    <Button
        android:id="@+id/btn_translate"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/base_black"
        android:text="@string/translate"
        android:textSize="16sp"
        android:tint="@color/base_black"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/video_result"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/translation_result"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>